--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,13 +48,13 @@ jobs:
           MACOS_PFX_CERT: ${{ secrets.MACOS_C12_CERT }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
 
-      # - name: Build
-      #   env:
-      #     WINDOWS_PFX_FILE: ${{ steps.write_file.outputs.filePath }}
-      #     CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
-      #     APPLE_ID: ${{ secrets.APPLE_ID }}
-      #     APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
-      #   run: 'npm run electron:build'
+      - name: Build
+        env:
+          WINDOWS_PFX_FILE: ${{ steps.write_file.outputs.filePath }}
+          CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
+        run: 'npm run make'
 
       - uses: actions/upload-artifact@v2
         name: Upload Windows artifacts
