--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         if: matrix.os == 'macOS-latest'
         run: chmod +x bin/add-macos-cert.sh && ./bin/add-macos-cert.sh
         env:
-          MACOS_PFX_CERT: ${{ secrets.MACOS_C12_CERT }}
+          MACOS_C12_CERT: ${{ secrets.MACOS_C12_CERT }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
 
       - name: Build
