--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "server": "./bin/node.sh dist/index.js",
-    "detect": "./bin/node.sh dist/examples/detect-subtitles.js"
+    "detect": "./bin/node.sh dist/examples/detect-subtitles.js",
+    "offset-srt": "./bin/node.sh dist/examples/offset-srt.js"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
@@ -18,6 +19,9 @@
   "dependencies": {
     "deepspeech": "^0.9.3",
     "express": "^4.17.1",
-    "ffmpeg-static": "^4.4.0"
+    "ffmpeg-static": "^4.4.0",
+    "ffprobe-static": "^3.0.0",
+    "srt": "^0.0.3",
+    "subtitle": "^4.1.1"
   }
 }
