tweak artifact name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,5 +67,5 @@ jobs:
         name: Upload macOS artifacts
         if: matrix.os == 'macOS-latest'
         with:
-          name: macOS.zip
+          name: macOS-x64
           path: ./client/out/make/*.dmg
