--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "auto-subs",
+  "name": "sub-dazzle",
   "version": "1.0.0",
   "main": "src/index.js",
   "license": "MIT",
+  "workspaces": [
+    "client"
+  ],
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
