--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "license": "MIT",
   "workspaces": [
-    "client"
+    "electron"
   ],
   "scripts": {
     "build": "tsc",
