--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,27 @@ dist
 node_modules
 .env*
 electron/out
+
+
+# React
+
+# dependencies
+/react/.pnp
+.pnp.js
+
+# testing
+/react/coverage
+
+# production
+/react/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
