--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,9 @@
   "name": "react-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "BROWSER=none node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
