--- a/package.json
+++ b/package.json
@@ -4,23 +4,32 @@
   "main": "src/index.js",
   "license": "MIT",
   "workspaces": [
-    "electron"
+    "electron",
+    "client"
   ],
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "server": "./bin/node.sh dist/index.js",
+    "build": "tsc && npm run build -w client",
+    "start": "concurrently 'npm run actions:client' 'npm run actions:electron'",
+    "actions:electron": "wait-on tcp:3000 && npm start -w electron",
+    "actions:client": "npm start -w client",
+    "actions:server": "./bin/node.sh dist/index.js",
     "detect": "./bin/node.sh dist/examples/detect-subtitles.js"
   },
   "devDependencies": {
+    "concurrently": "^6.3.0",
     "dotenv": "^10.0.0",
     "prettier": "^2.4.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "wait-on": "^6.0.0"
   },
   "dependencies": {
     "deepspeech": "^0.9.3",
     "express": "^4.17.1",
     "ffmpeg-static": "^4.4.0"
+  },
+  "volta": {
+    "node": "16.13.0",
+    "npm": "8.1.3"
   }
 }
