--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
       matrix:
         # os: [macOS-latest, windows-latest]
         os: [macOS-latest]
-    defaults:
-      run:
-        working-directory: electron
+    # defaults:
+    #   run:
+    #     working-directory: electron
 
     steps:
       - name: Check out Git repository
@@ -48,13 +48,16 @@ jobs:
           MACOS_C12_CERT: ${{ secrets.MACOS_C12_CERT }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
 
-      - name: Build
+      - name: Build React
+        run: 'npm run build -w client'
+
+      - name: Build Electron
         env:
           WINDOWS_PFX_FILE: ${{ steps.write_file.outputs.filePath }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
-        run: 'npm run make'
+        run: 'npm run make -w electron'
 
       - uses: actions/upload-artifact@v2
         name: Upload Windows artifacts
