--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-modules-
+
       - name: Install Deps
         run: 'npm install --build-from-source'
 
@@ -57,7 +58,8 @@ jobs:
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
-        run: 'npm run make -w electron'
+        working-directory: electron
+        run: 'npm run make'
 
       - uses: actions/upload-artifact@v2
         name: Upload Windows artifacts
