--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
       matrix:
         # os: [macOS-latest, windows-latest]
         os: [macOS-latest]
-    # defaults:
-    #   run:
-    #     working-directory: electron
+    defaults:
+      run:
+        working-directory: electron
 
     steps:
       - name: Check out Git repository
@@ -50,7 +50,8 @@ jobs:
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
 
       - name: Build React
-        run: 'npm run build -w client'
+        working-directory: client
+        run: 'npm install && npm run build'
 
       - name: Build Electron
         env:
@@ -58,7 +59,6 @@ jobs:
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
-        working-directory: electron
         run: 'npm run make'
 
       - uses: actions/upload-artifact@v2
