--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Build React
         working-directory: client
-        run: 'npm install && npm run build'
+        run: 'npm run build && mv ./build ../electron/html'
 
       - name: Build Electron
         env:
