--- a/electron/package.json
+++ b/electron/package.json
@@ -21,8 +21,7 @@
     "electron": "^15.3.0"
   },
   "volta": {
-    "node": "16.13.0",
-    "npm": "8.1.3"
+    "extends": "../package.json"
   },
   "dependencies": {
     "electron-log": "^4.4.1",
