--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
       matrix:
         # os: [macOS-latest, windows-latest]
         os: [macOS-latest]
-    defaults:
-      run:
-        working-directory: electron
+    # defaults:
+    #   run:
+    #     working-directory: electron
 
     steps:
       - name: Check out Git repository
@@ -29,9 +29,6 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-modules-
-
-      - name: Install Deps
-        run: 'npm install --build-from-source'
 
       - name: Add Windows certificate
         if: matrix.os == 'windows-latest'
@@ -49,12 +46,20 @@ jobs:
           MACOS_C12_CERT: ${{ secrets.MACOS_C12_CERT }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
 
+      - name: Install React Deps
+        working-directory: client
+        run: 'npm run build'
+
       - name: Build React
         working-directory: client
         run: 'npm run build'
 
-      - name: Move React
-        run: 'mv ../client/build ./html'
+      - name: Install Electron Deps
+        working-directory: electron
+        run: 'npm install --build-from-source'
+
+      - name: Copy React Build
+        run: 'cp -R ./client/build ./electron/html'
 
       - name: Build Electron
         env:
@@ -62,6 +67,7 @@ jobs:
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
+        working-directory: electron
         run: 'npm run make'
 
       - uses: actions/upload-artifact@v2
