--- a/electron/package.json
+++ b/electron/package.json
@@ -7,7 +7,8 @@
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make --arch=x64",
+    "rebuild": "electron-rebuild"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +19,8 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.61",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
-    "electron": "^15.3.0"
+    "electron": "^15.3.0",
+    "electron-rebuild": "^3.2.3"
   },
   "volta": {
     "node": "16.13.0",
