--- a/electron/package.json
+++ b/electron/package.json
@@ -19,8 +19,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.61",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
-    "electron": "^15.3.0",
-    "electron-rebuild": "^3.2.3"
+    "electron": "^15.3.0"
   },
   "volta": {
     "node": "16.13.0",
