--- a/electron/package.json
+++ b/electron/package.json
@@ -7,8 +7,7 @@
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
-    "make": "electron-forge make --arch=x64",
-    "rebuild": "electron-rebuild"
+    "make": "electron-forge make"
   },
   "author": "",
   "license": "ISC",
