fixup! move electron to root package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,15 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "allowJs": true,
     "target": "es6",
-    "baseUrl": "src",
+    "baseUrl": "./src",
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*"],
   "lib": ["ES2020"]
 }
