--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,20 +47,14 @@ jobs:
           MACOS_C12_CERT: ${{ secrets.MACOS_C12_CERT }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
 
-      - name: Install React Deps
-        working-directory: client
+      - name: Install Deps
         run: 'npm install'
 
-      - name: Build React
-        working-directory: client
+      - name: Build
         run: 'npm run build'
 
-      - name: Install Electron Deps
-        working-directory: electron
-        run: 'npm install --build-from-source'
-
-      - name: Copy React Build
-        run: 'cp -R ./client/build ./electron/html'
+      - name: Copy React Bundle
+        run: 'cp -R ./client/build ./dist/html'
 
       - name: Build Electron
         env:
@@ -68,7 +62,6 @@ jobs:
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
-        working-directory: electron
         run: 'npm run make'
 
       - uses: actions/upload-artifact@v2
