--- a/package.json
+++ b/package.json
@@ -1,20 +1,29 @@
 {
   "name": "sub-dazzle",
   "version": "1.0.0",
-  "main": "src/index.js",
   "license": "MIT",
+  "private": true,
+  "main": "dist/main.js",
   "workspaces": [
-    "electron",
     "client"
   ],
   "scripts": {
     "build": "tsc && npm run build -w client",
-    "start": "concurrently 'npm run actions:client' 'npm run actions:electron'",
-    "actions:electron": "wait-on tcp:3000 && npm start -w electron",
+    "start": "concurrently 'npm run actions:client' 'npm run debug:electron'",
+    "make": "electron-forge make",
+    "debug:electron": "wait-on tcp:3000 && npm run actions:electron",
     "actions:client": "npm start -w client",
-    "actions:server": "./bin/node.sh dist/index.js",
+    "actions:server": "./bin/node.sh dist/base.js",
+    "actions:electron": "tsc && electron dist/electron/main.js",
     "detect": "./bin/node.sh dist/examples/detect-subtitles.js",
     "postinstall": "./bin/deepspeech-setup.sh"
+  },
+  "dependencies": {
+    "deepspeech": "^0.9.3",
+    "express": "^4.17.1",
+    "ffmpeg-static": "^4.4.0",
+    "electron-log": "^4.4.1",
+    "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
@@ -22,15 +31,20 @@
     "prettier": "^2.4.1",
     "tslint": "^6.1.3",
     "typescript": "^4.4.4",
-    "wait-on": "^6.0.0"
+    "wait-on": "^6.0.0",
+    "@electron-forge/cli": "^6.0.0-beta.61",
+    "@electron-forge/maker-deb": "^6.0.0-beta.61",
+    "@electron-forge/maker-dmg": "^6.0.0-beta.61",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.61",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
+    "@electron-forge/maker-zip": "^6.0.0-beta.61",
+    "electron": "^15.3.0"
   },
-  "dependencies": {
-    "deepspeech": "^0.9.3",
-    "express": "^4.17.1",
-    "ffmpeg-static": "^4.4.0"
+  "config": {
+    "forge": "./forge.config.js"
   },
   "volta": {
     "node": "16.13.0",
-    "npm": "8.1.3"
+    "yarn": "1.22.17"
   }
 }
