--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "private": true,
-  "main": "dist/main.js",
+  "main": "dist/electron/main.js",
   "workspaces": [
     "client"
   ],
