--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,6 @@ jobs:
       matrix:
         # os: [macOS-latest, windows-latest]
         os: [macOS-latest]
-    # defaults:
-    #   run:
-    #     working-directory: electron
 
     steps:
       - name: Check out Git repository
@@ -46,10 +43,10 @@ jobs:
           MACOS_C12_CERT: ${{ secrets.MACOS_C12_CERT }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
 
-      - name: Install Deps
+      - name: Install dependencies
         run: 'npm install'
 
-      - name: Make Electron App
+      - name: Build electron app
         env:
           WINDOWS_PFX_FILE: ${{ steps.write_file.outputs.filePath }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
@@ -65,7 +62,7 @@ jobs:
           path: ./out/make/**/*Setup.exe
 
       - uses: actions/upload-artifact@v2
-        name: Upload macOS artifacts
+        name: Upload MacOS artifacts
         if: matrix.os == 'macOS-latest'
         with:
           name: macOS-x64
