--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "release": "electron-forge publish",
-    "lint": "eslint . --ext js,ts",
-    "postinstall": "./bin/deepspeech-setup.sh"
+    "lint": "eslint . --ext js,ts"
   },
   "dependencies": {
     "deepspeech": "^0.9.3",
