--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   },
   "volta": {
     "node": "16.13.0",
-    "yarn": "1.22.17"
+    "npm": "8.1.3"
   },
   "eslintConfig": {
     "extends": [
