--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,6 @@ jobs:
       matrix:
         # os: [macOS-latest, windows-latest]
         os: [macOS-latest]
-    defaults:
-      run:
-        working-directory: electron
 
     steps:
       - name: Check out Git repository
@@ -29,8 +26,6 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-modules-
-      - name: Install Deps
-        run: 'npm install --build-from-source'
 
       - name: Add Windows certificate
         if: matrix.os == 'windows-latest'
@@ -48,12 +43,16 @@ jobs:
           MACOS_C12_CERT: ${{ secrets.MACOS_C12_CERT }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
 
-      - name: Build
+      - name: Install dependencies
+        run: 'npm install'
+
+      - name: Build electron app
         env:
           WINDOWS_PFX_FILE: ${{ steps.write_file.outputs.filePath }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
+          DEBUG: electron-packager
         run: 'npm run make'
 
       - uses: actions/upload-artifact@v2
@@ -64,8 +63,8 @@ jobs:
           path: ./out/make/**/*Setup.exe
 
       - uses: actions/upload-artifact@v2
-        name: Upload macOS artifacts
+        name: Upload MacOS artifacts
         if: matrix.os == 'macOS-latest'
         with:
           name: macOS-x64
-          path: ./electron/out/make/*.dmg
+          path: ./out/make/*.dmg
