--- a/package.json
+++ b/package.json
@@ -1,35 +1,87 @@
 {
   "name": "sub-dazzle",
   "version": "1.0.0",
-  "main": "src/index.js",
   "license": "MIT",
-  "workspaces": [
-    "electron",
-    "client"
-  ],
+  "private": true,
+  "main": "./.webpack/main/index.js",
+  "homepage": "./",
   "scripts": {
-    "build": "tsc && npm run build -w client",
-    "start": "concurrently 'npm run actions:client' 'npm run actions:electron'",
-    "actions:electron": "wait-on tcp:3000 && npm start -w electron",
-    "actions:client": "npm start -w client",
-    "actions:server": "./bin/node.sh dist/index.js",
-    "detect": "./bin/node.sh dist/examples/detect-subtitles.js"
-  },
-  "devDependencies": {
-    "concurrently": "^6.3.0",
-    "dotenv": "^10.0.0",
-    "prettier": "^2.4.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.4.4",
-    "wait-on": "^6.0.0"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "release": "electron-forge publish",
+    "lint": "eslint . --ext js,ts"
   },
   "dependencies": {
     "deepspeech": "^0.9.3",
+    "electron-log": "^4.4.1",
+    "electron-squirrel-startup": "^1.0.0",
     "express": "^4.17.1",
-    "ffmpeg-static": "^4.4.0"
+    "ffmpeg-static": "^4.4.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@electron-forge/cli": "^6.0.0-beta.61",
+    "@electron-forge/maker-deb": "^6.0.0-beta.61",
+    "@electron-forge/maker-dmg": "^6.0.0-beta.61",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.61",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
+    "@electron-forge/maker-zip": "^6.0.0-beta.61",
+    "@electron-forge/plugin-webpack": "^6.0.0-beta.61",
+    "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.36",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "babel-loader": "^8.2.3",
+    "concurrently": "^6.3.0",
+    "css-loader": "^6.5.1",
+    "dotenv": "^10.0.0",
+    "electron": "^15.3.0",
+    "file-loader": "^6.2.0",
+    "prettier": "^2.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "style-loader": "^3.3.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.4.4",
+    "wait-on": "^6.0.0",
+    "web-vitals": "^1.1.2"
+  },
+  "config": {
+    "forge": "./forge.config.js"
   },
   "volta": {
     "node": "16.13.0",
     "npm": "8.1.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
