--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,9 +12,6 @@ jobs:
       matrix:
         # os: [macOS-latest, windows-latest]
         os: [macOS-latest]
-    defaults:
-      run:
-        working-directory: electron
 
     steps:
       - name: Check out Git repository
@@ -63,7 +60,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file_glob: true
-          file: ./electron/out/make/squirrel.windows/x64/**
+          file: ./out/make/squirrel.windows/x64/**
           tag: ${{ github.ref }}
           overwrite: true
 
@@ -73,6 +70,6 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file_glob: true
-          file: ./electron/out/make/**
+          file: ./out/make/**
           tag: ${{ github.ref }}
           overwrite: true
