--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,8 +26,6 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-modules-
-      - name: Install Deps
-        run: 'npm install --build-from-source'
 
       - name: Add Windows certificate
         if: matrix.os == 'windows-latest'
@@ -45,7 +43,10 @@ jobs:
           MACOS_C12_CERT: ${{ secrets.MACOS_C12_CERT }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
 
-      - name: Build
+      - name: Install dependencies
+        run: 'npm install'
+
+      - name: Build Electron app
         env:
           WINDOWS_PFX_FILE: ${{ steps.write_file.outputs.filePath }}
           CERTIFICATE_PASSWORD: ${{ secrets.CERTIFICATE_PASSWORD }}
