--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "lint": "eslint . --ext js,ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/material": "^5.0.6",
     "deepspeech": "^0.9.3",
     "electron-log": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.17.1",
     "ffmpeg-static": "^4.4.0",
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
@@ -70,18 +76,6 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
     ]
   }
 }
