make mac zip builds too

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,4 +71,4 @@ jobs:
         if: matrix.os == 'macOS-latest'
         with:
           name: macOS-x64
-          path: ./out/make/*.dmg
+          path: ./out/make/*
