--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,10 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "noEmit": true,
-    "baseUrl": "./src",
     "jsx": "react-jsx",
     "strict": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "baseUrl": ".",
+    "rootDirs": ["core"]
   }
 }
