--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/uuid": "^8.3.1",
     "babel-loader": "^8.2.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "concurrently": "^6.3.0",
     "css-loader": "^6.5.1",
     "dotenv": "^10.0.0",
