Add express server and queue system (#9)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "noEmit": true,
-    "baseUrl": "./src",
     "jsx": "react-jsx",
     "strict": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "baseUrl": ".",
+    "paths": {
+      "components/*": ["./src/components/*"],
+      "routes/*": ["./src/routes/*"],
+      "utils/*": ["./src/utils/*"]
+    }
   }
 }
