--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "sub-dazzle",
   "version": "0.0.1",
   "license": "MIT",
-  "private": true,
   "main": "./.webpack/main/index.js",
-  "homepage": "./",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
@@ -26,7 +24,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -45,16 +44,21 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/express": "^4.17.13",
+    "@types/ffmpeg-static": "^3.0.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "@types/uuid": "^8.3.1",
     "babel-loader": "^8.2.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "concurrently": "^6.3.0",
     "css-loader": "^6.5.1",
     "dotenv": "^10.0.0",
     "electron": "^15.3.0",
     "file-loader": "^6.2.0",
+    "json-loader": "^0.5.7",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
