--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
+    "debounce": "^1.2.1",
     "deepspeech": "^0.9.3",
     "electron-log": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.17.1",
     "ffmpeg-static": "^4.4.0",
+    "got": "^11.8.2",
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "tar": "^6.1.11",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -44,12 +47,15 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/debounce": "^1.2.1",
     "@types/express": "^4.17.13",
     "@types/ffmpeg-static": "^3.0.0",
+    "@types/got": "^9.6.12",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "@types/tar": "^6.1.0",
     "@types/uuid": "^8.3.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-module-resolver": "^4.1.0",
