--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,8 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        # os: [macOS-latest, windows-latest]
-        os: [macOS-latest]
+        os: [macOS-latest, windows-latest]
 
     steps:
       - name: Check out Git repository
