--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,7 +62,7 @@ jobs:
         name: Upload Windows artifacts
         if: matrix.os == 'windows-latest'
         with:
-          name: windows.zip
+          name: windows
           path: ./out/make/**/*Setup.exe
 
       - uses: actions/upload-artifact@v2
