Build and sign windows x64 binary (#11)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        # os: [macOS-latest, windows-latest]
-        os: [macOS-latest]
+        os: [macOS-latest, windows-latest]
 
     steps:
       - name: Check out Git repository
@@ -63,7 +62,7 @@ jobs:
         name: Upload Windows artifacts
         if: matrix.os == 'windows-latest'
         with:
-          name: windows.zip
+          name: win-x64
           path: ./out/make/**/*Setup.exe
 
       - uses: actions/upload-artifact@v2
@@ -71,4 +70,4 @@ jobs:
         if: matrix.os == 'macOS-latest'
         with:
           name: macOS-x64
-          path: ./out/make/*
+          path: ./out/make/**/*.*
