--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.1
         with:
-          access_token: ${{ secrets.GH_TOKEN }}
+          access_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check out Git repository
         uses: actions/checkout@v1
