--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "main": "./.webpack/main/index.js",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "electron-forge start --inspect-electron",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "release": "electron-forge publish",
-    "lint": "eslint . --ext js,ts"
+    "lint": "eslint . --ext js,ts",
+    "rebuild": "npm rebuild --runtime=electron --target=15.3.0 --disturl=https://atom.io/download/atom-shell --abi=75"
   },
   "dependencies": {
     "@emotion/react": "^11.5.0",
@@ -16,17 +17,19 @@
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
     "debounce": "^1.2.1",
-    "deepspeech": "^0.9.3",
+    "deepspeech": "^0.10.0-alpha.3",
     "electron-log": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.17.1",
     "ffmpeg-static": "^4.4.0",
     "got": "^11.8.2",
     "history": "^5.1.0",
+    "leven": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "subtitle": "^4.1.1",
     "tar": "^6.1.11",
     "uuid": "^8.3.2"
   },
@@ -42,6 +45,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.61",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.0.0-beta.61",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.61",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@testing-library/jest-dom": "^5.15.0",
